<resources>
    <string name="app_name">Tasker MQTT</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_settings">Settings!?</string>
    <string name="pref_title_mqtt_host">MQTT Host</string>
    <string name="pref_default_mqtt_port">1883</string>
    <string name="pref_title_mqtt_port">MQTT Port</string>
    <string name="pref_title_mqtt_use_ssl">Use SSL/TLS</string>
    <string name="pref_default_mqtt_client_id">tasker-mqtt</string>
    <string name="pref_title_mqtt_client_id">MQTT Client Id</string>
    <string name="pref_title_mqtt_use_auth">Authenticate to MQTT Broker</string>
    <string name="pref_title_mqtt_username">MQTT Username</string>
    <string name="pref_title_mqtt_password">MQTT Password</string>
    <string name="pref_header_mqtt_connection">MQTT Connection</string>
    <string name="pref_title_mqtt_connection_settings">MQTT Connection</string>
    <string name="pref_title_testing"><![CDATA[Testing & Debugging]]></string>
    <string name="pref_title_mqtt_connect">Connect</string>
    <string name="pref_title_mqtt_disconnect">Disconnect</string>
    <string name="pref_title_mqtt_subscribe">Subscribe</string>
    <string name="plugin_name">TaskerMQTT</string>
    <string name="pref_title_accept">Accept</string>
    <string name="btn_accept">Accept</string>
    <string name="filter_topic">Filter by Topic</string>
    <string name="filter_payload">Filter Payload</string>
    <string name="title_event_source">Event Source</string>
    <string name="title_message_filter">Message Filter</string>
    <string name="title_action_type">Action</string>
    <string name="title_action_properties">Action Properties</string>
    <string name="topic">Topic</string>
    <string name="payload">Payload</string>

    <string-array name="event_sources">
        <item>Message Received</item>
        <item>Connected</item>
        <item>Disconnected</item>
    </string-array>

    <string-array name="action_types">
        <item>Connect</item>
        <item>Disconnect</item>
        <item>Subscribe Topic</item>
        <item>Unsubscribe Topic</item>
        <item>Publish Message</item>
    </string-array>
</resources>
