<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:hint="@string/filter_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_topic"
        android:inputType="text" />

    <EditText
        android:hint="@string/filter_payload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_payload"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finishActivity"
        android:text="@string/btn_accept" />

</LinearLayout>