<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleActionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingTop="16dp"
        android:text="@string/title_action_type"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/actionType"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:entries="@array/action_types"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/titleActionProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingTop="16dp"
        android:text="@string/title_action_properties"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:hint="@string/topic"
        android:inputType="text"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight" />

    <EditText
        android:id="@+id/payload"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:hint="@string/payload"
        android:inputType="text"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:onClick="finishActivity"
        android:text="@string/btn_accept" />

</LinearLayout>