<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleEventSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingTop="16dp"
        android:text="@string/title_event_source"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/eventSource"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:entries="@array/event_sources"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/titleMessageFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingTop="16dp"
        android:text="@string/title_message_filter"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/filter_topic"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:hint="@string/filter_topic"
        android:inputType="text"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight" />

    <EditText
        android:id="@+id/filter_payload"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:hint="@string/filter_payload"
        android:inputType="text"
        android:paddingLeft="?attr/listPreferredItemPaddingLeft"
        android:paddingRight="?attr/listPreferredItemPaddingRight" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:onClick="finishActivity"
        android:text="@string/btn_accept" />

</LinearLayout>